# electroshop

./: .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/: setup_db.py
src/electronics_network/: settings.py  urls.py
src/network/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/network/migrations/: 0001_initial.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
