[tool.poetry]
name = "electroshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 120